--- a/_config.yml
+++ b/_config.yml
@@ -1,15 +1,15 @@
-title: Anatoly Nikiforov — Software Engineer
-description: Professional Portfolio: 5+ years experience, Distributed Systems, Cloud Infrastructure
+title: "Anatoly Nikiforov — Software Engineer"
+description: "Professional Portfolio: 5+ years experience, Distributed Systems, Cloud Infrastructure"
 url: "https://nikiforidi.github.io"
 baseurl: ""
-theme: minima
-markdown: kramdown
-highlighter: rouge
+theme: "minima"
+markdown: "kramdown"
+highlighter: "rouge"
 plugins:
-  - jekyll-github-metadata
-  - jekyll-seo-tag
+  - "jekyll-github-metadata"
+  - "jekyll-seo-tag"
 exclude:
-  - README.md
-  - LICENSE
-  - .gitignore
-  - init-portfolio.sh
+  - "README.md"
+  - "LICENSE"
+  - ".gitignore"
+  - "init-portfolio.sh"
