--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
+title: "Anatoly Nikiforov — Software Engineer"
 description: "Professional Portfolio: 5+ years experience, Distributed Systems, Cloud Infrastructure"
 url: "https://nikiforidi.github.io"
 baseurl: ""
