fix duplicated headers

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Anatoly Nikiforov - Technical Portfolio
+title: Anatoly Nikiforov
 description: Architecture, Algorithms, System Design
 theme: minima
 plugins:
