--- a/_config.yml
+++ b/_config.yml
@@ -1,35 +1,10 @@
 title: Anatoly Nikiforov
 description: Architecture, Algorithms, System Design
-baseurl: ""
-url: "https://nikiforidi.github.io"
-
-# Build Settings
-markdown: kramdown
-highlighter: rouge
-
-# Sass Configuration (CRITICAL for CSS)
-sass:
-  sass_dir: assets/css
-  style: compressed
-
-# Plugins
+theme: minima
 plugins:
   - jekyll-feed
-
-# Navigation
 header_pages:
   - index.md
   - about/
   - specs/
   - deep-dives/
-
-# Exclude
-exclude:
-  - generate_context.py
-  - init_portfolio.py
-  - rebuild.sh
-  - portfolio_context.md
-  - Gemfile
-  - Gemfile.lock
-  - README.md
-  - .gitignore
